# auto-mv

./: .env  Cargo.toml  README.md
source/: scripts.txt  subtitle.ass
src/: main.rs
src/ffmpeg/: command.rs
src/models/: ass_subtitle.rs  mod.rs  slide.rs  subtitle.rs
src/speech/: local.rs  mod.rs  voice.rs
