[package]
name = "auto-mv"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"

log = "0.4.22"
prost = "0.13.3"
protoc = "2.28.0"
prost-types = "0.11" # ここを追加
# reqwest = { version = "0.12.8", features = ["json"] }
# rodio = "0.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.12.3"

gauth = "0.8"
http = "1.1.0"


[build-dependencies]
tonic-build = "0.12.3"
